@@ -1,5 +1,5 @@
-version=2.0.0
-date=17.06.2006
+version=2.0.1
+date=22.06.2006
 type=Release
 info=
 
