@@ -1,8 +1,8 @@
 #!/bin/sh
 # -----------------------------------------------------------
 # Tools (yjogol)
-# $Date: 2006/06/17 17:21:18 $
-# $Revision: 1.12 $
+# $Date: 2006/06/22 19:30:57 $
+# $Revision: 1.13 $
 # -----------------------------------------------------------
 . ./_Y_Globals.sh
 . ./_Y_Library.sh
