@@ -1,8 +1,8 @@
 #!/bin/sh
 # -----------------------------------------------------------
 # Y Library (yjogol)
-# $Date: 2006/06/17 17:21:18 $
-# $Revision: 1.10 $
+# $Date: 2006/06/22 19:30:57 $
+# $Revision: 1.11 $
 # -----------------------------------------------------------
 
 # -----------------------------------------------------------
